// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginTerminal render loading 1`] = `
.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  color: #000;
  white-space: pre;
  background: #fff;
  border: 1px solid #fff;
  box-shadow: rgba(0,0,0,0.16) 0px 2px 4px;
  border-radius: 6px;
  height: 100%;
}

.emotion-7:focus {
  border: 1px solid var(--primary);
  outline: none;
}

.emotion-4 {
  position: relative;
  padding: 15px;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  width: 100%;
  white-space: normal;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-3 {
  margin-left: 15px;
}

.emotion-2 {
  position: relative;
  display: block;
  width: 18px;
  height: 18px;
}

.emotion-1 {
  font-size: 18px;
}

.emotion-6 {
  padding: 5px;
  white-space: normal;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  padding: 0 15px 30px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 30px 0 10px;
}

<div
  class="emotion-7"
  tabindex="1"
>
  <div
    class=" emotion-4"
  >
    <p
      class="emotion-0"
    >
      Dependencies
    </p>
    <div
      class="emotion-3"
    >
      <button
        class="btn btn-outline-primary btn-sm"
        data-testid="1_filter-button"
        type="button"
      >
        <span
          class=" emotion-2"
        >
          <i
            class="material-icons emotion-1"
          >
            filter_list
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-5"
    >
      <div
        class="spinner-grow"
      />
    </div>
  </div>
</div>
`;

exports[`PluginTerminal render with data 1`] = `
.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  color: #000;
  white-space: pre;
  background: #fff;
  border: 1px solid #fff;
  box-shadow: rgba(0,0,0,0.16) 0px 2px 4px;
  border-radius: 6px;
  height: 100%;
}

.emotion-33:focus {
  border: 1px solid var(--primary);
  outline: none;
}

.emotion-4 {
  position: relative;
  padding: 15px;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  width: 100%;
  white-space: normal;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-3 {
  margin-left: 15px;
}

.emotion-2 {
  position: relative;
  display: block;
  width: 18px;
  height: 18px;
}

.emotion-1 {
  font-size: 18px;
}

.emotion-32 {
  padding: 5px;
  white-space: normal;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  padding: 0 15px 30px;
}

.emotion-31 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 30px 0 10px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-height: 450px;
  overflow: scroll;
}

.emotion-9 {
  list-style: none;
  width: 220px;
  margin: 10px;
  position: relative;
  text-align: center;
}

.emotion-8 {
  color: #000;
}

.emotion-8:hover,
.emotion-8:active,
.emotion-8:focus {
  color: #000;
}

.emotion-5 {
  width: 100%;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  font-size: 14px;
}

.emotion-7 {
  width: 100%;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  font-size: 24px;
}

.emotion-16 {
  color: var(--red);
}

.emotion-19 {
  font-size: 12px;
  padding: 0;
  margin-left: 10px;
  margin-top: -4px;
}

<div
  class="emotion-33"
  tabindex="1"
>
  <div
    class=" emotion-4"
  >
    <p
      class="emotion-0"
    >
      Dependencies
    </p>
    <div
      class="emotion-3"
    >
      <button
        class="btn btn-outline-primary btn-sm"
        data-testid="1_filter-button"
        type="button"
      >
        <span
          class=" emotion-2"
        >
          <i
            class="material-icons emotion-1"
          >
            filter_list
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="emotion-32"
  >
    <ul
      class="emotion-31"
    >
      <li
        class="emotion-9"
      >
        <a
          class="emotion-8"
          href="https://www.npmjs.com/package/react"
          target="_blank"
        >
          <div
            class="emotion-5"
          >
            react
          </div>
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              16.8.4
            </span>
          </div>
        </a>
      </li>
      <li
        class="emotion-9"
      >
        <a
          class="emotion-8"
          href="https://www.npmjs.com/package/react-dom"
          target="_blank"
        >
          <div
            class="emotion-5"
          >
            react-dom
          </div>
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              16.8.4
            </span>
          </div>
        </a>
      </li>
      <li
        class="emotion-9"
      >
        <a
          class="emotion-8"
          href="https://www.npmjs.com/package/@types/react"
          target="_blank"
        >
          <div
            class="emotion-5"
          >
            @types/react
          </div>
          <div
            class="emotion-7"
          >
            <span
              class="emotion-16"
            >
              16.8.3
            </span>
            <button
              class="emotion-19 btn btn-danger btn-sm"
              type="button"
            >
              <span
                class=" emotion-2"
              >
                <i
                  class="material-icons emotion-1"
                >
                  arrow_upward
                </i>
              </span>
            </button>
          </div>
        </a>
      </li>
      <li
        class="emotion-9"
      >
        <a
          class="emotion-8"
          href="https://www.npmjs.com/package/@types/node"
          target="_blank"
        >
          <div
            class="emotion-5"
          >
            @types/node
          </div>
          <div
            class="emotion-7"
          >
            <span
              class="emotion-16"
            >
              10.0.0
            </span>
            <button
              class="emotion-19 btn btn-danger btn-sm"
              type="button"
            >
              <span
                class=" emotion-2"
              >
                <i
                  class="material-icons emotion-1"
                >
                  arrow_upward
                </i>
              </span>
            </button>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
